--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pandas = "^2.0.1"
 dagster-aws = "^0.19.4"
 dagster-docker = "^0.19.9"
 dagster-postgres = "^0.19.9"
+dagster-pandas = "^0.19.9"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -22,6 +23,10 @@ pytest = "^7.3.2"
 black = "^23.3.0"
 ruff = "^0.0.272"
 pre-commit = "^3.3.2"
+
+
+[tool.poetry.group.test.dependencies]
+importlib-resources = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core"]
