--- a/ansible/files/Dockerfile_dagster
+++ b/ansible/files/Dockerfile_dagster
@@ -15,6 +15,6 @@ ENV DAGSTER_HOME=/opt/dagster/dagster_home/
 
 RUN mkdir -p $DAGSTER_HOME
 
-COPY ./dagster_deployment/dagster.yaml ./dagster_deployment/workspace.yaml $DAGSTER_HOME
+COPY dagster.yaml workspace.yaml $DAGSTER_HOME
 
 WORKDIR $DAGSTER_HOME
